--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slidev",
   "private": true,
   "scripts": {
-    "build": "slidev build --base /slidev/",
+    "build": "slidev build",
     "dev": "slidev --open",
     "export": "slidev export"
   },
